--- a/config/translations/api/en.yml
+++ b/config/translations/api/en.yml
@@ -3,7 +3,19 @@ en:
     default_message: Not implemented
 
     errors:
+      page_not_found: "Not Found. There is no such route '%{method} %{path}'"
       cant_save_record: "Can't save record. Errors: %{errors}"
+      wrong_uuid_format: has wrong UUID format
+      not_found: Record not found
+      you_dont_have_access: You don't have access to perform this action
+      unknown_error: "Unknown error: %{error}"
 
     profile:
       password_changed: Password successfuly changed!
+
+    posts:
+      deleted: Post successfuly deleted!
+
+    params:
+      page: Page offset to fetch
+      per_page: Number of results to return per page
